src/objects/QPMS__Complaint_General_Sub_Task__c.object
<CustomObject>
    <description>This object stores sub task information related complaint records.</description>
    <fields>
        <fullName>QPMS__Action_Plan_Status__c</fullName>
        <description>This field is used to save Action Plan Status Type</description>
        <label>Action Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <description>For calculate subtask age</description>
        <formula>TEXT( if(ISBLANK( QPMS__Closed_Date__c ),TODAY() - DATEVALUE( CreatedDate ), QPMS__Closed_Date__c-DATEVALUE( CreatedDate ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Completed__c</fullName>
        <description>This field is used to save Approval completed status</description>
        <label>Approval Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Assigned User value</description>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Associated_Root_Causes__c</fullName>
        <description>This field is used to save Associated Root Causes Value</description>
        <label>Associated Root Causes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Cause_Code_Description__c</fullName>
        <description>This field is used to save Cause Code Description value</description>
        <label>Cause Code Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Cause_Code_Name__c</fullName>
        <formula>QPMS__Cause_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cause Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Cause_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Cause Code value</description>
        <label>Cause Code</label>
        <referenceTo>QPMS__Cause__c</referenceTo>
        <relationshipLabel>Complaint General Sub Tasks</relationshipLabel>
        <relationshipName>Complaint_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Change_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>This field is used to save Closed Date value</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>This field is used to save Comments value</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Complaint General Task value</description>
        <label>Complaint General Task</label>
        <referenceTo>QPMS__Complaint_General_Task__c</referenceTo>
        <relationshipLabel>Complaint General Sub Tasks</relationshipLabel>
        <relationshipName>Complaint_General_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Name__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Complaint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Completed value</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_General_Sub_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>This field is used to save Completed Date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed__c</fullName>
        <description>This field is used to save Completed status</description>
        <label>Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Date_Field__c</fullName>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This field is used to save Description value</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Details__c</fullName>
        <description>This field is used to save Details value</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used to save Due Date value</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Initiating_Site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Task__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Pend_Save_ActionPlan__c</fullName>
        <description>This field is used to save Pending Save ActionPlan value</description>
        <label>Pend Save ActionPlan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Plan_Statement__c</fullName>
        <description>This field is used to save Plan Statement value</description>
        <label>Plan Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used to save Status value</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Submit_WithOut_Approval__c</fullName>
        <description>This field is used to save Submit WithOut Approval value</description>
        <label>Submit WithOut Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <description>This field is used to save Title value</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to save Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Risk Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint General Sub Task</label>
    <nameField>
        <displayFormat>CGSR-{0000}</displayFormat>
        <label>Complaint General Sub Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint General Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Action_Plan</fullName>
        <active>true</active>
        <label>Action Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__AdhocTask_Actions</fullName>
        <active>true</active>
        <label>AdhocTask Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Product_Evaluation_Actions</fullName>
        <active>true</active>
        <label>Product Evaluation Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Review_DHR_Actions</fullName>
        <active>true</active>
        <label>Review DHR Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Root_Cause</fullName>
        <active>true</active>
        <label>Root Cause</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>